AUX_SOURCE_DIRECTORY(. LIBNVC_SRC)
AUX_SOURCE_DIRECTORY(${MPACK_SRC_DIR} MPACK_SRC)
AUX_SOURCE_DIRECTORY(${STRFUNC_SRC_DIR} STRFUNC_SRC)

ADD_LIBRARY(nvc ${LIBNVC_SRC} ${MPACK_SRC} ${STRFUNC_SRC})

TARGET_INCLUDE_DIRECTORIES(nvc PUBLIC "${MPACK_INCLUDE_DIRS}")
TARGET_INCLUDE_DIRECTORIES(nvc PUBLIC "${STRFUNC_INCLUDE_DIRS}")

INSTALL(TARGETS nvc DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/log.hpp        DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/ctf.hpp        DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/libnvc.hpp     DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/socket.hpp     DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/valdef.hpp     DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/objdef.hpp     DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/typedef.hpp    DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/apiclient.hpp  DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/guiclient.hpp  DESTINATION include)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/asiosocket.hpp DESTINATION include)
