FIND_PACKAGE(SDL2   REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

AUX_SOURCE_DIRECTORY(. NVIM_SDL2_SRC)
ADD_EXECUTABLE(nvim_sdl2 ${NVIM_SDL2_SRC})

TARGET_INCLUDE_DIRECTORIES(nvim_sdl2 PRIVATE ${LIBNVC_INCLUDE})
FIND_LIBRARY(LIBNVC_LIBNAME nvc HINTS ${LIBNVC_LIB})

# for the pthread issue
# from: https://stackoverflow.com/questions/1620918/cmake-and-libpthread
TARGET_LINK_LIBRARIES(nvim_sdl2 Threads::Threads)
TARGET_LINK_LIBRARIES(nvim_sdl2 ${LIBNVC_LIBNAME})
TARGET_LINK_LIBRARIES(nvim_sdl2 ${REPROC_LIBRARIES})
TARGET_LINK_LIBRARIES(nvim_sdl2 SDL2                 )
TARGET_LINK_LIBRARIES(nvim_sdl2 SDL2_ttf             )
TARGET_LINK_LIBRARIES(nvim_sdl2 SDL2_image           )
TARGET_LINK_LIBRARIES(nvim_sdl2 ${REPROCXX_LIBRARIES} ${REPROC_LIBRARIES})

INSTALL(TARGETS nvim_sdl2 DESTINATION nvim_sdl2)
